# PromptMill

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile.cpu  Dockerfile.gpu  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml
src/promptmill/: __init__.py  __main__.py  container.py
src/promptmill/application/: __init__.py
src/promptmill/application/services/: __init__.py  health_service.py  model_service.py  prompt_service.py
src/promptmill/application/use_cases/: __init__.py  delete_model.py  generate_prompt.py  get_health_status.py  load_model.py  select_model_by_vram.py  unload_model.py
src/promptmill/domain/: __init__.py  exceptions.py
src/promptmill/domain/entities/: __init__.py  gpu_info.py  model.py  role.py
src/promptmill/domain/ports/: __init__.py  gpu_detector_port.py  llm_port.py  model_repository_port.py  role_repository_port.py
src/promptmill/domain/value_objects/: __init__.py  prompt_request.py  prompt_result.py
src/promptmill/infrastructure/: __init__.py
src/promptmill/infrastructure/adapters/: __init__.py  gpu_detector_adapter.py  huggingface_adapter.py  llama_cpp_adapter.py  role_repository_adapter.py
src/promptmill/infrastructure/config/: __init__.py  model_configs.py  settings.py
src/promptmill/infrastructure/persistence/: __init__.py  roles_data.py
src/promptmill/presentation/: __init__.py  gradio_app.py  theme.py
tests/: __init__.py  conftest.py  test_app.py
tests/integration/: __init__.py  test_container.py
tests/unit/: __init__.py
tests/unit/application/: test_use_cases.py
tests/unit/domain/: test_entities.py  test_value_objects.py
tests/unit/infrastructure/: test_adapters.py
